--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.19"
 lazy_static = "1.4.0"
-sha1 = "0.6.0"
 structopt = "0.3.21"
 thiserror = "1.0.23"
