--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: John Andrews <theunderdog09@gmail.com>
 pkgname=newt
-pkgver=0.1.0
+pkgver=0.1.1
 pkgrel=1
 epoch=
 pkgdesc="Minimal CLI note-taking manager"
@@ -18,7 +18,7 @@ backup=()
 options=()
 install=
 changelog=
-source=("git+keybase://private/theunderdog09/newt")
+source=("git+keybase://private/theunderdog09/newt#tag=v0.1.1")
 md5sums=('SKIP')
 
 prepare() {
