--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: John Andrews <theunderdog09@gmail.com>
 pkgname=newt
 pkgver=0.1.1
-pkgrel=1
+pkgrel=2
 epoch=
 pkgdesc="Minimal CLI note-taking manager"
 arch=('any')
@@ -18,7 +18,7 @@ backup=()
 options=()
 install=
 changelog=
-source=("git+keybase://private/theunderdog09/newt#tag=v0.1.1")
+source=("git+keybase://private/theunderdog09/newt#tag=v0.1.1-2")
 md5sums=('SKIP')
 
 prepare() {
@@ -38,4 +38,5 @@ check() {
 package() {
 	cd "$srcdir/$pkgname"
 	install -Dm 755 target/release/$pkgname -t "$pkgdir/usr/bin"
+  install -Dm 644 "$srcdir/$pkgname/completions/_newt" -t "$pkgdir/usr/share/zsh/site-functions"
 }
